# jbrowse-anywidget

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.js
.github/workflows/: test.yml
examples/: 01_quickstart.ipynb  02_dataframe_analysis.ipynb  03_alignments.ipynb  04_multisample_variants.ipynb  05_bam_coverage.ipynb  05_cnv_calling.ipynb  06_popgen_selection.ipynb  07_differential_expression.ipynb  08_hosted_assembly_hub.ipynb  09_interactive_controls.ipynb  10_region_reactive.ipynb  11_synteny_ecoli.ipynb  README.md
jbrowse_anywidget/: __init__.py
scripts/: build_examples.py  gen_screenshot_specs.py  screenshot_examples.mjs
src/: app.jsx  app.ts  declare.d.ts  index.jsx  index.ts
tests/: test_assembly.py  test_features.py  test_track.py  test_traits.py  test_views.py
